<resources>
    <string name="app_name">Colour Guess</string>
    <string name="colour_guess">Colour Guess</string>
    <string name="test">Test</string>
    <string name="test_button">test</string>
    <string name="play">Play</string>
    <string name="learn">Learn</string>
    <string name="about">About</string>
    <string name="none">Click Next To Get Started</string>
    <string name="back">Return</string>
    <string name="next">Next</string>

    <!-- Colour Strings -->
    <string name="red">Red</string> <!--1-->
    <string name="orange">Orange</string> <!--2-->
    <string name="yellow">Yellow</string> <!--3-->
    <string name="green">Green</string> <!--4-->
    <string name="blue">Blue</string> <!--5-->
    <string name="purple">Purple</string> <!--6-->
    <string name="pink">Pink</string> <!--7-->
    <string name="white">White</string> <!--8-->
    <string name="grey">Grey</string> <!--9-->
    <string name="brown">Brown</string> <!--10-->
    <string name="black">Black</string> <!--11-->

    <!-- Strings for about page -->
    <string name="aboutDesc">An app that is aimed at teaching younger children their colours.</string>

    <!-- Strings for play page -->
    <string name="optionOne">One</string>
    <string name="optionTwo">Two</string>
    <string name="optionThree">Three</string>
    <string name="optionFour">Four</string>
    <string name="what_colour_is_this">What Colour Is This?</string>
    <string name="done">Done</string>
    <string name="check_answer">Check Answer</string>
    <string name="blank"> </string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>

    <!-- Strings for score page -->
    <string name="score_test">Score Test</string>
    <string name="okay">OK</string>
    <string name="foodTest">food</string>
</resources>